<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".ui.MainFragment">

    <cn.wthee.words.util.TianZiGeTextView
        android:id="@+id/wordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fixed_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:padding="@dimen/small_padding"
        android:text="含义："
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordText" />

    <TextView
        android:id="@+id/word_ex_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="4"
        android:padding="@dimen/small_padding"
        android:text="请开始你的表演~"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fixed_text" />

    <View
        android:id="@+id/hr"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hr_height"
        android:background="@color/colorHR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_ex_text" />

    <LinearLayout
        android:id="@+id/function_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hr">

        <Button
            android:id="@+id/customize"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/small_margin"
            android:background="@drawable/customize_btn" />

        <Button
            android:id="@+id/save"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/small_margin"
            android:background="@drawable/save_btn" />
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:hint="@string/word_hint"
        app:errorTextAppearance="@style/TextAppearance.Design.Error.Custom"
        tools:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/word_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/word_ex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:hint="@string/word_ex_hint"
        tools:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/word_ex_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:id="@+id/customize_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/function_icon"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="线框"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layout_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/title_line">

                <TextView
                    android:id="@+id/line_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:text="@string/line_color"
                    android:textSize="@dimen/small_text_size" />

                <cn.wthee.words.util.ColorSeekBar
                    android:id="@+id/color_seek_bar_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/color_picker_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/color_picker_margin" />

                <cn.wthee.words.util.ColorSeekBar
                    android:id="@+id/color_seek_bar_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/color_picker_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/color_picker_margin" />

                <TextView
                    android:id="@+id/line_width"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:text="@string/line_width"
                    android:textSize="@dimen/small_text_size" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/line_width_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:max="10" />

                <TextView
                    android:id="@+id/line_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:text="@string/line_size"
                    android:textSize="@dimen/small_text_size" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/line_size_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:max="200" />

            </LinearLayout>

            <TextView
                android:id="@+id/title_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="字体"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_line" />

            <LinearLayout
                android:id="@+id/layout_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/title_word">

                <TextView
                    android:id="@+id/word_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:text="@string/word_color"
                    android:textSize="@dimen/small_text_size" />

                <cn.wthee.words.util.ColorSeekBar
                    android:id="@+id/word_color_seek_bar_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/color_picker_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/color_picker_margin" />

                <cn.wthee.words.util.ColorSeekBar
                    android:id="@+id/word_color_seek_bar_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/color_picker_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/color_picker_margin" />

                <TextView
                    android:id="@+id/word_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:text="字体大小"
                    android:textSize="@dimen/small_text_size" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/word_size_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:max="100" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_size"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/save_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <Button
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:background="@drawable/back_btn"/>

        <Button
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:background="@drawable/download_btn"/>

        <Button
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:background="@drawable/share_btn"/>

    </LinearLayout>
</LinearLayout>

